<resources>
    <string name="app_name">Motivation</string>
    <string name="text_name_user">Olá, Kotlin!</string>
    <string name="text_random_phrases">Riscos dever ser corridos, porque o maior perigo é não arriscar nada!</string>
    <string name="button_new_phrase">nova frase</string>
    <string name="text_welcome">Vamos começar?</string>
    <string name="edit_your_name">Qual o seu nome?</string>
    <string name="button_save">salvar</string>
</resources>