<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E0F54"
    android:padding="16dp"
    tools:context=".UserActivity">

    <TextView
        android:layout_marginTop="64dp"
        android:textSize="24sp"
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cabin"
        android:text="@string/text_welcome"
        android:textColor="@color/white" />

    <EditText
        android:textSize="22sp"
        android:id="@+id/edit_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/edit_your_name"
        android:textColorHint="@color/white" />

    <Button
        android:layout_marginBottom="32dp"
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        android:fontFamily="@font/cabin"
        android:text="@string/button_save"
        android:textColor="@color/white" />


</RelativeLayout>